--- a/acceptance/testdata/runnerdeploy.envsubst.yaml
+++ b/acceptance/testdata/runnerdeploy.envsubst.yaml
@@ -1,12 +1,15 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: org-runnerdeploy
+  name: ${NAME}
 spec:
 #  replicas: 1
   template:
     spec:
+      enterprise: ${TEST_ENTERPRISE}
+      group: ${TEST_GROUP}
       organization: ${TEST_ORG}
+      repository: ${TEST_REPO}
 
       #
       # Custom runner image
@@ -42,3 +45,17 @@ spec:
       # Non-standard working directory
       #
       # workDir: "/"
+---
+apiVersion: actions.summerwind.dev/v1alpha1
+kind: HorizontalRunnerAutoscaler
+metadata:
+  name: ${NAME}
+spec:
+  scaleTargetRef:
+    name: ${NAME}
+  scaleUpTriggers:
+  - githubEvent: {}
+    amount: 1
+    duration: "1m"
+  minReplicas: 0
+  maxReplicas: 10
