Fix missing pip bin path (/home/runner/.local/bin) (#1263)
Fixes #1261

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -116,6 +116,9 @@ COPY entrypoint.sh /
 ENV PATH="${PATH}:${HOME}/.local/bin"
 ENV ImageOS=ubuntu20
 
+RUN echo "PATH=${PATH}" > /etc/environment \
+    && echo "ImageOS=${ImageOS}" >> /etc/environment
+
 USER runner
 
 ENTRYPOINT ["/usr/local/bin/dumb-init", "--"]
