refactor: remove legacy controller Docker build (#1360) [skip ci]
* refactor: remove legacy build and use buildkit

* refactor: add runner version to root makefie

* refactor: enable buildkit for runner make build

* refactor: ignore runner makefile in ci

Co-authored-by: toast-gear <toast-gear@users.noreply.github.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -21,7 +21,8 @@
     },
     {
       "fileMatch": [
-        "runner/Makefile"
+        "runner/Makefile",
+        "Makefile"
       ],
       "matchStrings": ["RUNNER_VERSION \\?= +(?<currentValue>.*?)\\n"],
       "depNameTemplate": "actions/runner",
