e2e: Fix wrong scale trigger configuration used in test (#1434)

--- a/acceptance/testdata/runnerdeploy.envsubst.yaml
+++ b/acceptance/testdata/runnerdeploy.envsubst.yaml
@@ -52,7 +52,8 @@ spec:
   scaleTargetRef:
     name: ${NAME}
   scaleUpTriggers:
-  - githubEvent: {}
+  - githubEvent:
+      workflowJob: {}
     amount: 1
     duration: "10m"
   minReplicas: ${RUNNER_MIN_REPLICAS}
