--- a/acceptance/testdata/runnerset.envsubst.yaml
+++ b/acceptance/testdata/runnerset.envsubst.yaml
@@ -71,7 +71,8 @@ spec:
     kind: RunnerSet
     name: ${NAME}
   scaleUpTriggers:
-  - githubEvent: {}
+  - githubEvent:
+      workflowJob: {}
     amount: 1
     duration: "10m"
   minReplicas: ${RUNNER_MIN_REPLICAS}
