ci: match renovate with new dockerfile names (#1453)

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -30,8 +30,8 @@
     },
     {
       "fileMatch": [
-        "runner/Dockerfile",
-        "runner/Dockerfile.dindrunner"
+        "runner/actions-runner.dockerfile",
+        "runner/actions-runner-dind.dockerfile"
       ],
       "matchStrings": ["RUNNER_VERSION=+(?<currentValue>.*?)\\n"],
       "depNameTemplate": "actions/runner",
