Add priorityClassName to CRDs (#1513)
* Add pod priorityClassName to controller and crds

* Add missing bits in bases directory

* Regenerate crds

--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_runners.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_runners.yaml
@@ -3171,6 +3171,8 @@ spec:
                 organization:
                   pattern: ^[^/]+$
                   type: string
+                priorityClassName:
+                  type: string
                 repository:
                   pattern: ^[^/]+/[^/]+$
                   type: string
