--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerdeployments.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerdeployments.yaml
@@ -3233,6 +3233,8 @@ spec:
                         organization:
                           pattern: ^[^/]+$
                           type: string
+                        priorityClassName:
+                          type: string
                         repository:
                           pattern: ^[^/]+/[^/]+$
                           type: string
