--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerreplicasets.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerreplicasets.yaml
@@ -3230,6 +3230,8 @@ spec:
                         organization:
                           pattern: ^[^/]+$
                           type: string
+                        priorityClassName:
+                          type: string
                         repository:
                           pattern: ^[^/]+/[^/]+$
                           type: string
